feat: Add cron job scheduling documentation and time-series metrics system guide

--- a/development/backend/index.mdx
+++ b/development/backend/index.mdx
@@ -113,6 +113,14 @@ The development server starts at `http://localhost:3000` with API documentation 
   </Card>
   
   <Card 
+    icon="clock" 
+    href="/development/backend/cron" 
+    title="Cron Job Scheduling"
+  >
+    Schedule recurring background tasks using cron expressions integrated with the job queue system.
+  </Card>
+  
+  <Card 
     icon="terminal" 
     href="/development/backend/satellite/events" 
     title="Satellite Events"
