--- a/self-hosted/quick-start.mdx
+++ b/self-hosted/quick-start.mdx
@@ -17,6 +17,37 @@ Get DeployStack up and running in minutes. This guide covers deploying the core 
 - **Docker Compose**: [Install Docker Compose](https://docs.docker.com/compose/install/)
 - **System Requirements**: 4GB RAM, 20GB disk space
 
+### Linux Host Requirements
+
+<Warning>
+**For Linux deployments only**: To enable nsjail process isolation in the satellite service, your Linux host must have unprivileged user namespaces enabled.
+</Warning>
+
+Check if already enabled:
+
+```bash
+cat /proc/sys/kernel/unprivileged_userns_clone
+# Should return: 1
+```
+
+If not enabled (returns 0 or file doesn't exist), enable it:
+
+```bash
+echo 'kernel.unprivileged_userns_clone=1' | sudo tee /etc/sysctl.d/00-userns.conf
+sudo sysctl -p /etc/sysctl.d/00-userns.conf
+```
+
+Verify the setting:
+
+```bash
+cat /proc/sys/kernel/unprivileged_userns_clone
+# Should now return: 1
+```
+
+<Info>
+**Note**: This setting is only required for production Linux deployments. Development on macOS/Windows doesn't need this configuration.
+</Info>
+
 ## Method 1: Docker Compose (Recommended)
 
 The fastest way to get DeployStack running with proper networking and persistence.
@@ -198,16 +229,42 @@ After completing the basic backend and frontend setup, deploy at least one satel
   </Step>
   
   <Step title="Start Satellite Service">
-    ```bash
-    docker run -d \
-      --name deploystack-satellite \
-      -p 3001:3001 \
-      -e DEPLOYSTACK_BACKEND_URL="http://localhost:3000" \
-      -e DEPLOYSTACK_SATELLITE_NAME="my-satellite-001" \
-      -e DEPLOYSTACK_REGISTRATION_TOKEN="your-token-here" \
-      -v deploystack_satellite_persistent:/app/persistent_data \
-      deploystack/satellite:latest
-    ```
+    <Tabs>
+      <Tab title="Standard Deployment">
+        If you configured the host system with unprivileged user namespaces (recommended):
+        
+        ```bash
+        docker run -d \
+          --name deploystack-satellite \
+          -p 3001:3001 \
+          -e DEPLOYSTACK_BACKEND_URL="http://localhost:3000" \
+          -e DEPLOYSTACK_SATELLITE_NAME="my-satellite-001" \
+          -e DEPLOYSTACK_REGISTRATION_TOKEN="your-token-here" \
+          -v deploystack_satellite_persistent:/app/persistent_data \
+          deploystack/satellite:latest
+        ```
+      </Tab>
+      
+      <Tab title="Alternative (--sysctl flag)">
+        If you cannot modify the host system, pass the sysctl setting at runtime:
+        
+        ```bash
+        docker run -d \
+          --name deploystack-satellite \
+          --sysctl kernel.unprivileged_userns_clone=1 \
+          -p 3001:3001 \
+          -e DEPLOYSTACK_BACKEND_URL="http://localhost:3000" \
+          -e DEPLOYSTACK_SATELLITE_NAME="my-satellite-001" \
+          -e DEPLOYSTACK_REGISTRATION_TOKEN="your-token-here" \
+          -v deploystack_satellite_persistent:/app/persistent_data \
+          deploystack/satellite:latest
+        ```
+        
+        <Warning>
+        The `--sysctl` flag requires Docker to be run with additional privileges. For production deployments, configuring the host system is preferred.
+        </Warning>
+      </Tab>
+    </Tabs>
     
     <Warning>
     **Satellite Name Requirements:**
