--- a/self-hosted/quick-start.mdx
+++ b/self-hosted/quick-start.mdx
@@ -11,42 +11,17 @@ Get DeployStack up and running in minutes. This guide covers deploying the core 
 **Important**: Satellites are required for DeployStack to function. The platform alone cannot manage MCP servers - you must deploy at least one satellite.
 </Warning>
 
+<Info>
+**Deployment Type**: This guide covers **development and single-team deployments**. The satellite runs without process isolation, suitable for local development or when serving only your own team.
+
+For **production deployments with multiple teams** or external users, see [Production Satellite Setup](/self-hosted/production-satellite) which includes nsjail process isolation for security and team separation.
+</Info>
+
 ## Prerequisites
 
 - **Docker**: [Install Docker](https://docs.docker.com/get-docker/)
 - **Docker Compose**: [Install Docker Compose](https://docs.docker.com/compose/install/)
 - **System Requirements**: 4GB RAM, 20GB disk space
-
-### Linux Host Requirements
-
-<Warning>
-**For Linux deployments only**: To enable nsjail process isolation in the satellite service, your Linux host must have unprivileged user namespaces enabled.
-</Warning>
-
-Check if already enabled:
-
-```bash
-cat /proc/sys/kernel/unprivileged_userns_clone
-# Should return: 1
-```
-
-If not enabled (returns 0 or file doesn't exist), enable it:
-
-```bash
-echo 'kernel.unprivileged_userns_clone=1' | sudo tee /etc/sysctl.d/00-userns.conf
-sudo sysctl -p /etc/sysctl.d/00-userns.conf
-```
-
-Verify the setting:
-
-```bash
-cat /proc/sys/kernel/unprivileged_userns_clone
-# Should now return: 1
-```
-
-<Info>
-**Note**: This setting is only required for production Linux deployments. Development on macOS/Windows doesn't need this configuration.
-</Info>
 
 ## Method 1: Docker Compose (Recommended)
 
@@ -229,42 +204,16 @@ After completing the basic backend and frontend setup, deploy at least one satel
   </Step>
   
   <Step title="Start Satellite Service">
-    <Tabs>
-      <Tab title="Standard Deployment">
-        If you configured the host system with unprivileged user namespaces (recommended):
-        
-        ```bash
-        docker run -d \
-          --name deploystack-satellite \
-          -p 3001:3001 \
-          -e DEPLOYSTACK_BACKEND_URL="http://localhost:3000" \
-          -e DEPLOYSTACK_SATELLITE_NAME="my-satellite-001" \
-          -e DEPLOYSTACK_REGISTRATION_TOKEN="your-token-here" \
-          -v deploystack_satellite_persistent:/app/persistent_data \
-          deploystack/satellite:latest
-        ```
-      </Tab>
-      
-      <Tab title="Alternative (--sysctl flag)">
-        If you cannot modify the host system, pass the sysctl setting at runtime:
-        
-        ```bash
-        docker run -d \
-          --name deploystack-satellite \
-          --sysctl kernel.unprivileged_userns_clone=1 \
-          -p 3001:3001 \
-          -e DEPLOYSTACK_BACKEND_URL="http://localhost:3000" \
-          -e DEPLOYSTACK_SATELLITE_NAME="my-satellite-001" \
-          -e DEPLOYSTACK_REGISTRATION_TOKEN="your-token-here" \
-          -v deploystack_satellite_persistent:/app/persistent_data \
-          deploystack/satellite:latest
-        ```
-        
-        <Warning>
-        The `--sysctl` flag requires Docker to be run with additional privileges. For production deployments, configuring the host system is preferred.
-        </Warning>
-      </Tab>
-    </Tabs>
+    ```bash
+    docker run -d \
+      --name deploystack-satellite \
+      -p 3001:3001 \
+      -e DEPLOYSTACK_BACKEND_URL="http://localhost:3000" \
+      -e DEPLOYSTACK_SATELLITE_NAME="my-satellite-001" \
+      -e DEPLOYSTACK_REGISTRATION_TOKEN="your-token-here" \
+      -v deploystack_satellite_persistent:/app/persistent_data \
+      deploystack/satellite:latest
+    ```
     
     <Warning>
     **Satellite Name Requirements:**
