feat: Add quick start guide to documentation and update teams structure description

--- a/general/teams.mdx
+++ b/general/teams.mdx
@@ -1,6 +1,7 @@
 ---
 title: Teams Structure in DeployStack
 description: Organize your MCP server management with teams - your workspace for managing servers and configurations in DeployStack.
+sidebarTitle: Teams
 ---
 
 # Teams
