--- a/general/quick-start.mdx
+++ b/general/quick-start.mdx
@@ -1,218 +1,196 @@
 ---
 title: Quick Start
-description: Get started with DeployStack in minutes - create your free account, configure MCP servers, and connect instantly with just a URL.
+description: Start using MCP tools in under 1 minute with DeployStack - no installation, no configuration files, just connect and go.
 ---
 
 # Quick Start
 
-Get started with DeployStack in minutes. This guide walks you through creating a free account, configuring your first MCP server, and connecting your development environment with zero installation.
+Get your first MCP tools running in under 1 minute. We've eliminated the installation friction that holds back MCP adoption - just create an account, click a button, and connect. Your account comes with a pre-installed MCP server ready to test immediately.
 
 ## What You'll Accomplish
 
 By the end of this guide, you'll have:
-- A free DeployStack account with team management
-- Your first MCP server configured with secure credentials
-- Instant access to MCP tools via satellite URL
-- VS Code connected to your team's MCP tools
+- A DeployStack account with one pre-installed MCP server
+- Your MCP client (VS Code, Cursor, or Claude Desktop) connected to DeployStack Satellite
+- Working MCP tools accessible through your client
+- Understanding of how to add more MCP servers
+
+**Time Required:** Under 1 minute (not counting account creation)
 
 ## Prerequisites
 
-- **VS Code or Cursor**: For MCP tool integration
-- **A few minutes**: This entire setup takes less than 3 minutes
-- **No installations required**: Zero local dependencies
+You need just two things:
 
-## Step 1: Create Your Free Account
+- **An MCP Client**: VS Code, Cursor IDE, or Claude Desktop
+- **A Web Browser**: For OAuth authorization
+- **That's it**: No installations, no CLI tools, no configuration file editing
+
+## The 3-Step Setup
+
+### Step 1: Create Your Account
 
 <Steps>
-  <Step title="Sign Up for DeployStack">
-    Visit [cloud.deploystack.io](https://cloud.deploystack.io) and create your free account:
+  <Step title="Sign Up">
+    Visit [cloud.deploystack.io](https://cloud.deploystack.io) and create your free account.
     
-    - Sign up with your email address or GitHub account
-    - Complete email verification if required
-    - You'll automatically get your own default team
+    You can sign up with:
+    - Email address
+    - GitHub account
   </Step>
   
   <Step title="Explore Your Dashboard">
-    Once logged in, you'll see preinstalled MCP servers in your dashboard.
-    We have preinstalled popular MCP servers like Sequential Thinking. You can add more whenever you want to.
+    Once logged in, you'll see your dashboard with:
+    - One pre-installed MCP server ready to use
+    - "Get Client Configuration" button in the top-right corner
+    - Empty team space ready for collaboration
+    
+    We pre-install a demo MCP server so you can test the platform immediately without adding anything first.
   </Step>
 </Steps>
 
-## Step 2: Get Your OAuth Credentials
+### Step 2: Connect Your MCP Client
 
-DeployStack Satellite provides instant MCP access through managed infrastructure - no installation required.
+Now connect your MCP client to DeployStack Satellite. This is where the "zero installation" comes in - no CLI tools to install, no npm packages to manage, just click and connect.
 
 <Steps>
-  <Step title="Create OAuth Client Credentials">
+  <Step title="Get Your Configuration">
     In your DeployStack dashboard:
     
-    1. Navigate to the **Satellite** section
-    2. Click **Create MCP Client Credentials**
-    3. Enter a name for your client (e.g., "VS Code", "Claude Desktop")
-    4. Copy the generated OAuth credentials:
-       - **Client ID**: `deploystack_mcp_client_abc123def456ghi789`
-       - **Client Secret**: `deploystack_mcp_secret_xyz789abc123def456ghi789jkl012`
+    1. Click the **"Get Client Configuration"** button (top-right corner)
+    2. A modal opens showing supported MCP clients
+    3. Select your client from the dropdown:
+       - VS Code
+       - Cursor IDE
+       - Claude Desktop
+  </Step>
+  
+  <Step title="Install or Copy Configuration">
+    Depending on your client, you'll see one of two options:
     
-    These OAuth credentials provide secure access to your team's MCP servers through standard OAuth Bearer Token authentication.
+    **For Cursor IDE:**
+    - Click the **"Install in Cursor"** button
+    - Cursor opens automatically with configuration applied
+    - Done! Skip to Step 3
+    
+    **For VS Code or Claude Desktop:**
+    - Copy the JSON configuration shown in the modal
+    - Open your MCP client settings
+    - Paste the configuration
+    - Save the settings file
   </Step>
 </Steps>
 
-## Step 3: Connect Your Development Environment
+<Callout type="info">
+  **What Just Happened?**
+  
+  You added the DeployStack Satellite URL to your MCP client. Instead of running MCP servers locally, your client now connects to our managed infrastructure where your MCP servers run securely with your team's credentials.
+</Callout>
 
-Now connect VS Code or Cursor to use your team's MCP servers via satellite.
+### Step 3: Authorize the Connection
+
+The final step happens automatically when you connect - DeployStack uses OAuth2.1 for secure, credential-free authorization.
 
 <Steps>
-  <Step title="Configure VS Code MCP Settings">
-    Open your VS Code settings and configure MCP to use the DeployStack Satellite.
-    
-    **Location**: `.vscode/settings.json` or global VS Code settings
-    
-    **Before** (manual MCP server management):
-
-    ```json
-    {
-      "mcpServers": {
-        "github": {
-          "command": "npx",
-          "args": ["@github/mcp"],
-          "env": {
-            "GITHUB_TOKEN": "your-token-here"
-          }
-        }
-      }
-    }
-    ```
-    
-    **After** (DeployStack Satellite):
-
-    ```json
-    {
-      "mcpServers": {
-        "deploystack": {
-          "url": "https://satellite.deploystack.io/mcp",
-          "oauth": {
-            "client_id": "deploystack_mcp_client_abc123def456ghi789",
-            "client_secret": "deploystack_mcp_secret_xyz789abc123def456ghi789jkl012"
-          },
-          "name": "DeployStack Satellite",
-          "description": "MCP-as-a-Service with zero installation"
-        }
-      }
-    }
-    ```
+  <Step title="Start Connection">
+    In your MCP client:
+    - Click **"Connect"** or **"Start"** next to the DeployStack Satellite entry
+    - Your web browser opens automatically
   </Step>
   
-  <Step title="Test MCP Connection">
-    1. **Restart VS Code** to load the new MCP configuration
-    2. **Open Claude or compatible MCP client**
-    3. **Test a tool**: Try using one of your configured MCP servers
-    4. **Verify**: Tools should work instantly without any local setup
+  <Step title="Select Team and Authorize">
+    In the browser window:
+    1. You'll see your available teams
+    2. Select the team you want to use
+    3. Click **"Authorize"**
+    4. Browser window closes automatically
+  </Step>
+  
+  <Step title="Connected!">
+    Back in your MCP client:
+    - Connection status shows "Connected"
+    - Your pre-installed MCP server is now available
+    - You can start using MCP tools immediately
   </Step>
 </Steps>
 
-## Step 4: Explore Your Setup
+## Verify It Works
 
-Now that everything is connected, explore what you can do:
+Let's make sure your MCP connection is working by testing your pre-installed server.
 
 <Steps>
-  <Step title="Test Available Tools">
-    In your VS Code MCP client:
-    - All configured MCP tools are instantly available
-    - No local processes or installations required
-    - Tools automatically include your team's credentials
+  <Step title="Open Your MCP Client">
+    In VS Code, Cursor, or Claude Desktop, open the MCP tools panel or command palette.
   </Step>
   
-  <Step title="Monitor Usage">
-    View activity in your [DeployStack dashboard](https://cloud.deploystack.io):
-    - Real-time MCP tool usage
-    - Team activity and analytics
-    - Satellite performance metrics
+  <Step title="Check Available Tools">
+    You should see tools from your pre-installed MCP server listed.
+    
+    Try running one of the available tools to confirm everything works.
   </Step>
   
-  <Step title="Manage Your Team">
-    Back in the [DeployStack dashboard](https://cloud.deploystack.io):
-    - Add more MCP servers to your team
-    - Manage credentials securely
-    - Monitor satellite usage
+  <Step title="View in Dashboard">
+    Go back to [cloud.deploystack.io](https://cloud.deploystack.io) and check:
+    - Your dashboard shows connection activity
+    - You can see which MCP server is active
+    - Usage analytics start appearing
   </Step>
 </Steps>
 
-## Managing Your Satellite Connection
-
-With DeployStack Satellite, management is done through the web dashboard:
-
-- **Configuration**: All changes made in [cloud.deploystack.io](https://cloud.deploystack.io)
-- **Instant Updates**: Changes take effect immediately, no local updates needed
-- **Team Switching**: Change teams in the dashboard, regenerate token if needed
-- **Monitoring**: View real-time usage and performance metrics
-- **Zero Maintenance**: No local processes to start, stop, or restart
-
-## Multiple Teams
-
-If you're part of multiple teams or create additional teams:
-
-1. **Switch Teams**: Use the team selector in your [DeployStack dashboard](https://cloud.deploystack.io)
-2. **Generate New OAuth Credentials**: Each team requires separate OAuth client credentials for security
-3. **Update VS Code**: Replace the oauth client_id and client_secret with the new team's credentials
-4. **Instant Access**: New team's MCP tools are immediately available
-
-When you switch teams:
-- New team's MCP servers become available instantly
-- Previous team's tools are no longer accessible (security isolation)
-- All team-specific credentials are automatically applied
+<Callout type="success">
+  **🎉 You're Done!**
+  
+  You now have a working MCP connection through DeployStack Satellite. Your pre-installed MCP server is running on managed infrastructure, and you can add more servers anytime from the catalog.
+</Callout>
 
 ## What's Next?
 
 ### Add More MCP Servers
 
-Expand your toolkit by adding more MCP servers:
-- **BrightData**: Web scraping and data collection
-- **Weather**: Weather information and forecasts
-- **Database**: Connect to your databases
-- **Custom Servers**: Add your own private MCP servers
+Your account comes with one pre-installed server, but DeployStack offers access to hundreds of MCP servers from the official registry:
 
-### Team Collaboration
+1. **Browse the Catalog**: Visit the [MCP Server](https://cloud.deploystack.io/) in your dashboard
+2. **Choose Servers**: Browse by category or search for specific tools
+3. **Add to Team**: Click "Add to Team" on any server
+4. **Configure Credentials**: Add required credentials (API keys, tokens, etc.)
+5. **Instant Access**: Server appears in your MCP client immediately
 
-If you're working with a team:
-- **[Invite Team Members](/onboard-new-team-members)**: Add developers to your team
-- **[Manage Roles](/roles)**: Set up proper access control
-- **[Team Management](/teams)**: Organize multiple projects
+For more details, see the [MCP Server Catalog Guide](/general/mcp-catalog).
 
-## Troubleshooting
+### Invite Team Members
 
-### Satellite Connection Issues
+DeployStack is built for team collaboration:
 
-1. **Check OAuth credentials**:
-   - Verify your client_id and client_secret are correct
-   - Regenerate OAuth credentials in dashboard if needed
+1. **Navigate to Team Settings**: Go to your team page
+2. **Click "Invite Members"**: Enter email addresses
+3. **Set Roles**: Choose appropriate permissions
+4. **Send Invitations**: Team members receive email invitations
+5. **Instant Sharing**: Once they accept, they get access to all team MCP servers
 
-2. **Verify VS Code configuration**:
-   - Ensure the satellite URL is `https://satellite.deploystack.io/mcp`
-   - Check oauth section has your current client_id and client_secret
-   - Restart VS Code after configuration changes
+## Working with Multiple Teams
 
-3. **Test connection**:
-   ```bash
-   curl -X POST https://satellite.deploystack.io/mcp \
-        -H "Content-Type: application/json" \
-        -H "Authorization: Bearer YOUR_OAUTH_TOKEN" \
-        -d '{"jsonrpc":"2.0","id":1,"method":"tools/list"}'
-   ```
+If you're part of multiple teams or create additional teams:
 
-### MCP Tools Not Working
+1. **Switch Teams in Dashboard**: Use the team selector at [cloud.deploystack.io](https://cloud.deploystack.io)
+2. **Disconnect in MCP Client**: Disconnect from DeployStack Satellite
+3. **Reconnect**: Click "Connect" again
+4. **Choose Different Team**: In the OAuth browser window, select the new team
+5. **Authorize**: Your MCP client now uses the new team's servers
 
-1. **Check satellite status**: Visit your [dashboard](https://cloud.deploystack.io) for real-time status
-2. **Verify credentials**: Ensure OAuth credentials are properly configured for your team
-3. **Client permissions**: Confirm your OAuth client has access to the required MCP servers
+**Each team has:**
+- Separate MCP server configurations
+- Independent credentials and API keys
+- Isolated usage and analytics
+- Team-specific access control
 
-### Need Help?
+## Get Help
 
-- **Community**: Join our [Discord](https://discord.gg/42Ce3S7b3b)
-- **Documentation**: Browse our [full documentation](/)
-- **Support**: Contact support for technical issues
+### Community Support
 
----
+- **Discord**: Join our [Discord community](https://discord.gg/42Ce3S7b3b) for real-time help
+- **GitHub Discussions**: Ask questions at [github.com/deploystackio/deploystack](https://github.com/deploystackio/deploystack)
 
-**🎉 Congratulations!** You now have DeployStack Satellite configured and running. Your development environment is connected to enterprise-grade MCP management with zero installation, secure credential handling, and instant team collaboration.
+### Documentation
 
-**Next Steps**: Explore the [MCP Catalog](https://cloud.deploystack.io) to add more tools to your team, or invite colleagues to collaborate on your projects.
+- **Full Docs**: Browse our complete documentation at [docs.deploystack.io](https://docs.deploystack.io)
+- **MCP Catalog**: Learn about available servers at [MCP Server Catalog](/general/mcp-catalog)
+- **Team Management**: Read [Team Management Guide](/general/teams) for collaboration features
