Refactor documentation: Remove redundant section headers across multiple files for improved clarity and consistency. - Deleted the troubleshooting document as it was deemed unnecessary.

--- a/index.mdx
+++ b/index.mdx
@@ -1,10 +1,9 @@
 ---
-title: DeployStack - Enterprise Control Plane for MCP Dcs
+title: DeployStack - Enterprise Control Plane for MCP
 description: Official DeployStack documentation - The Enterprise Control Plane for MCP servers. Secure, centralized management of your organization's AI tool landscape with the DeployStack Satellite.
 sidebarTitle: Overview
 ---
 
-# DeployStack - Enterprise Control Plane for MCP
 
 DeployStack is the **Enterprise Control Plane for the Model Context Protocol (MCP) ecosystem**. We provide a secure, centralized platform to manage your company's entire AI tool landscape, eliminating credential sprawl and enabling developers to move faster and more securely through edge DeployStack Satellite.
 
