fix: Update title and description for clarity and consistency in documentation

--- a/index.mdx
+++ b/index.mdx
@@ -1,11 +1,11 @@
 ---
-title: DeployStack - Enterprise Control Plane for MCP
-description: Official DeployStack documentation - The Enterprise Control Plane for MCP servers. Secure, centralized management of your organization's AI tool landscape with the DeployStack Satellite.
+title: DeployStack - The MCP Control Plane with Context Optimization
+description: Official DeployStack documentation - The first MCP-as-a-Service platform that solves both management complexity and context window bloat through intelligent hierarchical routing.
 sidebarTitle: Overview
 ---
 
 
-DeployStack is the **Enterprise Control Plane for the Model Context Protocol (MCP) ecosystem**. We provide a secure, centralized platform to manage your company's entire AI tool landscape, eliminating credential sprawl and enabling developers to move faster and more securely through edge DeployStack Satellite.
+DeployStack is **The First MCP-as-a-Service Platform**. We solve two critical problems: MCP management complexity (credentials, teams, governance) and context window consumption (90%+ token reduction through hierarchical routing). Just add a URL to VS Code - no installation, no local processes, instant access to all team tools.
 
 ## User Guides
 
@@ -31,7 +31,7 @@ DeployStack is the **Enterprise Control Plane for the Model Context Protocol (MC
     href="/self-hosted/quick-start"
     title="Self-Hosted DeployStack"
   >
-    Host DeployStack on your own infrastructure for complete control and security
+    Host DeployStack on your own servers for complete control and security
   </Card>  
   
   <Card 
@@ -91,7 +91,7 @@ DeployStack consists of several integrated components that work together to prov
     title="documentation" 
     href="https://github.com/deploystackio/documentation"
   >
-    Comprehensive guides for MCP server management, security, and team collaboration
+    Complete guides for MCP server management, security, and team collaboration
   </Card>
 </CardGroup>
 
